# aoc-2022-gnome-learns-rust

./: .gitignore  Cargo.toml  README.md
aoc/: Cargo.toml
aoc/inputs/: day24_easy.txt  eastwest.txt  easy.txt  pallettes2.txt  part2.txt  traversal2.txt
aoc/src/: main.rs
aoc/src/commands/: day10.rs  day11.rs  day12.rs  day12b.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day1a.rs  day2.rs  day21.rs  day23.rs  day24.rs  day3.rs  day3b.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
xtask/: Cargo.toml
