[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.6"
clap = {version="4.4.2", features=["derive"]}
enum-iterator = "1.4.1"
enum_dispatch = "0.3.12"
env_logger = "0.10.0"
error-stack = "0.4.0"
ethnum = "1.4.0"
log = "0.4.20"
nom = "7.1.3"
strum = "0.25.0"
strum_macros = "0.25.2"
